# Ai-Agent-UA-S-

./: .env.example  .gitignore  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: sample_trace.json
logs/: run_example.json
plugins/: __init__.py  _base.py  loader.py  web_search.py
src/agents/: base.py  executor.py  memory_agent.py  planner.py  researcher.py  validator.py
src/core/: constitution.py  graph.py  logger.py  prompts.py  state.py
src/interface/: app.py  cli.py
src/memory/: long_term.py
src/tools/: browser.py  filesystem.py  repl.py  shell.py
tests/: test_core.py
